--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "csscomb": "^4.3.0",
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
