--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "gulp-concat": "^2.6.1"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "node-fetch": "^2.6.0",
+    "simple-git": "^1.132.0"
   }
 }
