--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,15 +5,18 @@
   "main": "src/index.html",
   "dependencies": {
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.1.2"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "parcel-bundler": "^1.12.4"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "parcel src/index.html"
   },
   "repository": {
     "type": "git",
@@ -24,5 +27,9 @@
   "bugs": {
     "url": "https://github.com/nuposyatina/shri-CI/issues"
   },
-  "homepage": "https://github.com/nuposyatina/shri-CI#readme"
+  "homepage": "https://github.com/nuposyatina/shri-CI#readme",
+  "alias": {
+    "library": "./src/components/library",
+    "layouts": "./src/components/layouts"
+  }
 }
