--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "@babel/preset-env": "^7.9.0",
     "@babel/preset-react": "^7.9.4",
     "@svgr/parcel-plugin-svgr": "^5.3.1",
+    "@types/express": "^4.17.6",
+    "@types/node": "^13.13.4",
+    "@types/node-fetch": "^2.5.7",
     "babel-jest": "^25.3.0",
     "classnames": "^2.2.6",
     "csscomb": "^4.3.0",
@@ -34,7 +37,9 @@
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "parcel-bundler": "^1.12.4",
-    "redux-devtools-extension": "^2.13.8"
+    "redux-devtools-extension": "^2.13.8",
+    "ts-node": "^8.9.1",
+    "typescript": "^3.8.3"
   },
   "scripts": {
     "test": "jest",
