--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "@types/express": "^4.17.6",
     "@types/node": "^13.13.4",
     "@types/node-fetch": "^2.5.7",
+    "@types/react": "^16.9.34",
+    "@types/react-dom": "^16.9.7",
+    "@types/react-redux": "^7.1.7",
     "babel-jest": "^25.3.0",
     "classnames": "^2.2.6",
     "csscomb": "^4.3.0",
