Добавила типы для функциональных компонентов

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/preset-react": "^7.9.4",
     "@svgr/parcel-plugin-svgr": "^5.3.1",
     "@types/express": "^4.17.6",
+    "@types/history": "^4.7.5",
     "@types/node": "^13.13.4",
     "@types/node-fetch": "^2.5.7",
     "@types/react": "^16.9.34",
@@ -37,6 +38,7 @@
     "csscomb": "^4.3.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
+    "history": "^4.10.1",
     "html-reporter": "^5.15.2",
     "jest": "^25.3.0",
     "lodash": "^4.17.15",
